# microsupport

./: .gitignore  CMakeLists.txt  COPYRIGHT  format  index.html  magic.mk  microsupport.pro  project.mk  restyle.sh
docs-dev/: Doxyfile  json-info.txt
examples/: recv_raw.c  send_raw.c  us_example_hex_udp_rx.c  us_example_hex_udp_rx.cpp  us_example_hex_udp_tx.c  us_example_hex_udp_tx.cpp  us_example_http_client.c  us_example_http_client.cpp  us_example_http_server.c  us_example_http_server.cpp  us_example_httpd.c  us_example_json.c  us_example_json.cpp  us_example_mudp_rx.c  us_example_mudp_rx.cpp  us_example_mudp_tx.c  us_example_mudp_tx.cpp  us_example_reactor.c  us_example_reactor.cpp  us_example_webapp.c  us_example_webapp.cpp
hold/: us_osc_io.c  us_osc_io.h
include/: us.h  us.hpp  us_allocator.h  us_allocator.hpp  us_allocator_heap.h  us_allocator_heap.hpp  us_allocator_print.h  us_allocator_print.hpp  us_bits.h  us_buf.h  us_buffer.h  us_buffer.hpp  us_buffer_print.h  us_buffer_print.hpp  us_cgi.h  us_cgi.hpp  us_crc32.h  us_crc32.hpp  us_daemon.h  us_getopt.h  us_getopt.hpp  us_http.h  us_http.hpp  us_http_client.h  us_http_client.hpp  us_http_server.h  us_http_server.hpp  us_json.h  us_json.hpp  us_json_parser.h  us_json_parser.hpp  us_line_parse.h  us_line_parse.hpp  us_logger.h  us_logger.hpp  us_logger_printer.h  us_logger_printer.hpp  us_logger_stdio.h  us_logger_stdio.hpp  us_logger_syslog.h  (+113 more)
nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
src/: us_allocator.c  us_allocator.cpp  us_allocator_heap.c  us_allocator_heap.cpp  us_allocator_print.c  us_allocator_print.cpp  us_buf.c  us_buffer.c  us_buffer.cpp  us_buffer_print.c  us_buffer_print.cpp  us_cgi.c  us_cgi.cpp  us_crc32.c  us_crc32.cpp  us_getopt.c  us_getopt.cpp  us_http.c  us_http.cpp  us_http_client.c  us_http_client.cpp  us_http_server.c  us_http_server.cpp  us_json.c  us_json.cpp  us_json_parser.c  us_json_parser.cpp  us_line_parse.c  us_line_parse.cpp  us_logger.c  us_logger.cpp  us_logger_printer.c  us_logger_printer.cpp  us_logger_stdio.c  us_logger_stdio.cpp  us_logger_syslog.c  us_logger_syslog.cpp  us_logger_udp.c  us_logger_udp.cpp  us_mdns_avahi.c  (+109 more)
src/posix/: us_daemon.c
tests/: us_test_all.c  us_test_all.cpp  us_test_all_cpp.cpp  us_test_allocator.c  us_test_allocator.cpp  us_test_allocator_heap.c  us_test_allocator_heap.cpp  us_test_buffer.c  us_test_buffer.cpp  us_test_getopt.c  us_test_getopt.cpp  us_test_http.c  us_test_http.cpp  us_test_http_client.c  us_test_http_client.cpp  us_test_http_server.c  us_test_http_server.cpp  us_test_json.c  us_test_json.cpp  us_test_line_parse.c  us_test_line_parse.cpp  us_test_midi.c  us_test_midi.cpp  us_test_mtc.c  us_test_net.c  us_test_net.cpp  us_test_osc_dispatch.c  us_test_osc_dispatch.cpp  us_test_osc_io.c  us_test_osc_io.cpp  us_test_osc_line.c  us_test_osc_msg.c  us_test_osc_msg.cpp  us_test_packet_queue.c  us_test_queue.c  us_test_queue.cpp  us_test_slip.c  us_test_slip.cpp  us_test_trie.c  us_test_trie.cpp  (+1 more)
todo/: us_httpd_reactor.c  us_httpd_reactor.h
tools-dev/: us_tool_create_trie.c  us_tool_create_trie.cpp  us_tool_rx_osc.c  us_tool_rx_osc.cpp  us_tool_send_osc.c  us_tool_send_osc.cpp
